<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:background="@color/colorBg"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_design"
            android:onClick="launchSecondActivity"
            android:text="@string/menu1"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/button3"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_design"
            android:text="@string/menu2"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/button4"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_design"
            android:text="@string/menu3"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/button2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_design"
            android:onClick="exitApplication"
            android:text="@string/menu4"
            android:textColor="@color/colorAccent" />
    </LinearLayout>

</LinearLayout>